--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,19 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -24,4 +32,28 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.text {
+  font-weight: 600;
+  letter-spacing: 3.5px;
+  text-transform: uppercase;
+  font-family: 'Poppins';
+  font-size: 17px;
+  font-weight: 300;
+  fill: #ffffff;
+}
+
+
+#rotatingText {
+  animation-name: rotate-circle;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotate-circle {
+  to {
+    transform: rotate(1turn);
+  }
 }
